nohup.out
  File "bug_report.py", line 83
    wihile 1:
           ^
SyntaxError: invalid syntax
[master 3d5f7f4] 2016-12-09 18:45:00
 7 files changed, 1690 insertions(+), 7 deletions(-)
 create mode 100644 apkData/9054b1cc620dff012f610b9d0e664438.log
 create mode 100644 apkData/9054b1cc620dff012f610b9d0e664438.xml
 create mode 100644 nohup.out
To github.com:youngsheldon/hn_data.git
   8c5f61a..3d5f7f4  master -> master
[master 9be8d6a] 2016-12-10 18:45:13
 12 files changed, 3800 insertions(+), 218 deletions(-)
 create mode 100644 apkData/676e8d8893437e32822d1c9712253b3b.log
 create mode 100644 apkData/676e8d8893437e32822d1c9712253b3b.xml
 create mode 100644 apkData/99f244a9c56ad0dc63c13a21da245870.log
 create mode 100644 apkData/99f244a9c56ad0dc63c13a21da245870.xml
 create mode 100644 apkData/fe7d2790cb50c81794bff5fddae77ac6.log
 create mode 100644 apkData/fe7d2790cb50c81794bff5fddae77ac6.xml
To github.com:youngsheldon/hn_data.git
   3d5f7f4..9be8d6a  master -> master
